<resources>
    <string name="app_name">PopKorn Studio</string>

    <!-- No connection internet -->
    <string name="base_no_internet_connection_error">Sem conexão com a internet</string>
    <string name="base_no_internet_connection_close">FECHAR</string>

    <!-- Empty State -->
    <string name="empty_state_title">Sem Dados</string>
    <string name="empty_state_description">Não existem dados à serem exibidos</string>

    <!-- Failure -->
    <string name="failure_load_news">Não foi possível atualizar as notícias</string>
    <string name="failure_load_category">Não foi possível buscar as categorias =(</string>
    <string name="failure_load_challenge">Não foi possível gerar o desafio =(</string>

    <!-- Image descriptions -->
    <string name="content_description_splassh_screen">Tela de Carregamento com o logo do aplicativo</string>
    <string name="content_description_background_login">Background da tela de login</string>
    <string name="content_description_icon_person">Ícone de pessoa</string>
    <string name="content_description_icon_star">Ícone de estrela</string>
    <string name="content_description_icon_book">Ícone de livro aberto</string>
    <string name="content_description_icon_game_controller">Ícone de controle de videogame</string>
    <string name="content_description_icon_public">Ícone do planeta</string>

    <!-- button Actions -->
    <string name="action_sign_in_by_google">Entrar usando Google</string>
    <string name="action_loggout"><u>Sair</u></string>
    <string name="action_confirm">Confirmar</string>
    <string name="action_yes">SIM</string>
    <string name="action_no">NÃO</string>

    <!-- Title -->
    <string name="title_home">Olá, <b>%s!</b></string>
    <string name="title_game_choice_category">Escolha uma categoria</string>
    <string name="title_loading">Carregando…</string>
    <string name="title_challenge">Desafio</string>
    <string name="title_challenge_result">Resultado</string>
    <string name="title_ranking">Ranking</string>

    <!-- Dialog Title -->
    <string name="dialog_title_challenge_exit">Você realmente gostaria de sair?</string>

    <!-- Dialog Content -->
    <string name="dialog_content_challenge_exit">Caso você prossiga todas as questões respondidas serão canceladas!</string>

    <!-- Form topic -->
    <string name="form_topic_rate_app">Avalie na Loja</string>
    <string name="form_topic_check_ranking">Conferir Ranking</string>
    <string name="form_topic_about_popkorn">Sobre PopKorn</string>
    <string name="form_topic_start_challenge">Iniciar Desafio</string>
    <string name="form_topic_news">News</string>
    <string name="form_topic_title_card_news">Central de Notícias</string>
    <string name="form_topic_challenge_question_options">As Opções são:</string>

    <!-- Challenge Question -->
    <string name="timer_indicator">15</string>

    <!-- Challenge Result-->
    <string name="subtitle_challenge_result">Confira aqui o resultado do desafio</string>

    <!-- About -->
    <string name="about_description">Aloooooooo a todos os cinéfilos do mundo, aqui quem fala é a PopKorn, exatamente, O MELHOR QUIZ GAME DE FILMES DO SEU CELULAR (Ou pelo menos é o que quero ser Hahahha)\n\nEu sei que tenho muito a melhor, por isso, sempre que puder da um pulinho na loja pra me avaliar e comentar suas impressões boas e ruins, será um imenso prazer te oferecer cada vez mais diversão!</string>
    <string name="about_ps">Obs: Não deixe de seguir meu criador no "instagrão", ele não posta muito mas é firmezinha -> @isaque_dcoelho e manda um ola pra saber que tu ta vindo daqui fechado?! \n\nIsso é tudo pessoal, boa diversão!\n\nícone por: http://www.freepik.com/ e imagem no login por https://www.freepik.com/free-photos-vectors/mockup</string>

</resources>
